--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
